# horizon

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  HARDWARE.md  LICENSE  PLUGIN_INSTALL.md  README.md  compile_commands.json  platformio.ini
.github/workflows/: ci.yml  juce.yml
apps/horizon_cli/: horizon_cli.cpp
apps/portaudio_demo/: horizon_portaudio.cpp
docs/: CONTROL_MAP.csv  block_notes.md  dsp_math.md  host_io_adapters.md  host_portable.md  presets_gallery.md
docs/cmake/: horizon_dspConfig.cmake
examples/horizon_scope/: horizon_scope.ino
examples/minimal/: minimal.ino
examples/preset_morph/: preset_morph.ino
examples/preset_morph_walk/: README.md  preset_morph_walk.ino
examples/width_extremes/: width_extremes.ino
horizon_hw/: horizon_hw.kicad_prl  horizon_hw.kicad_pro  horizon_hw.kicad_sch
patches/cores/teensy4/: AudioStream.h  dspinst.h  kinetis.h  lint_stubs.h
plugins/: CMakeLists.txt  README.md
plugins/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/stubs/: Arduino.h  Audio.h
presets/: bus_glue.json  crunch_room.json  presets.json  story_morphs.json  width_extremes.json
src/: AirEQ.cpp  AirEQ.h  DynWidth.cpp  DynWidth.h  Horizon.cpp  Horizon.h  LimiterLookahead.cpp  LimiterLookahead.h  MSMatrix.cpp  MSMatrix.h  ParamSmoother.cpp  ParamSmoother.h  SoftSaturation.cpp  SoftSaturation.h  TiltEQ.cpp  TiltEQ.h  TransientDetector.cpp  TransientDetector.h  main.cpp  platformio.ini
src/host/: HostHorizonProcessor.cpp  HostHorizonProcessor.h
test/native_dsp/: HostProcessor.cpp  HostProcessor.h  README.md  process_wav.cpp  test_dsp.cpp
test/native_dsp/stubs/: Arduino.h  Audio.h  AudioStream.h
tools/: gen_compile_commands.py  install_vst3.sh  lint_stubs.py  render_preset_gallery.sh
